--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "author": "Samuel Pereira da Silva <samuel.silva513@etec.sp.gov.br> (@SMCodesP)",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc --noEmit",
@@ -19,44 +19,44 @@
     ]
   },
   "dependencies": {
-    "@octokit/graphql": "^8.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
+    "@octokit/graphql": "^8.2.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "ahooks": "^3.8.4",
-    "axios": "^1.7.2",
-    "class-variance-authority": "^0.7.0",
+    "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "ky": "^1.7.4",
-    "lucide-react": "^0.406.0",
-    "next": "14.2.4",
-    "next-themes": "^0.3.0",
-    "openai": "^4.89.0",
+    "cmdk": "^1.1.1",
+    "ky": "^1.8.0",
+    "lucide-react": "^0.487.0",
+    "next": "^15.3.0-canary.38",
+    "next-themes": "^0.4.6",
+    "openai": "^4.91.1",
     "polished": "^4.3.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.52.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.55.0",
     "sonner": "^1.5.0",
-    "swr": "^2.2.5",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "translatte": "^3.0.1",
     "waifu.it": "^1.2.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "@commitlint/cli": "19.3.0",
-    "@commitlint/config-conventional": "19.2.2",
-    "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "^10.4.19",
-    "husky": "9.0.11",
-    "lint-staged": "15.2.7",
-    "postcss": "^8.4.39",
+    "@biomejs/biome": "1.9.4",
+    "@commitlint/cli": "19.8.0",
+    "@commitlint/config-conventional": "19.8.0",
+    "@types/node": "22.14.0",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
+    "autoprefixer": "^10.4.21",
+    "husky": "9.1.7",
+    "lint-staged": "15.5.0",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.4",
-    "typescript": "5.5.3"
+    "typescript": "5.8.3"
   }
 }
