--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.55.0",
-    "sonner": "^1.5.0",
+    "sonner": "^2.0.3",
     "swr": "^2.3.3",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "translatte": "^3.0.1",
     "waifu.it": "^1.2.1"
@@ -49,14 +49,14 @@
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "19.8.0",
     "@commitlint/config-conventional": "19.8.0",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
-    "autoprefixer": "^10.4.21",
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^4.1.3",
     "typescript": "5.8.3"
   }
 }
