--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
     ]
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^0.2.11",
     "@octokit/graphql": "^8.2.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "ahooks": "^3.8.4",
+    "ai": "^4.3.9",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "gsap": "^3.12.7",
     "ky": "^1.8.0",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.0-canary.38",
+    "next": "^15.3.1-canary.14",
     "next-themes": "^0.4.6",
     "openai": "^4.91.1",
     "polished": "^4.3.1",
