--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gsap": "^3.12.7",
     "ky": "^1.8.0",
     "lucide-react": "^0.487.0",
+    "motion": "^12.7.4",
     "next": "^15.3.1-canary.14",
     "next-themes": "^0.4.6",
     "openai": "^4.91.1",
