--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "ahooks": "^3.8.4",
     "ai": "^4.3.13",
     "class-variance-authority": "^0.7.1",
